parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    KEYWORD
    LSP
    NEWLINE
    RSP
    TRUE

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> statement COMMA statement
Rule 4     statement -> FUNCTION VAR LPAREN statement RPAREN DEFSTART
Rule 5     statement -> FUNCTION VAR LPAREN RPAREN DEFSTART
Rule 6     statement -> CALL VAR LPAREN statement RPAREN
Rule 7     statement -> CALL VAR LPAREN RPAREN
Rule 8     statement -> WHILE LPAREN expr RPAREN DEFSTART
Rule 9     statement -> FOR LPAREN statement SEMICOLON expr SEMICOLON statement RPAREN DEFSTART
Rule 10    statement -> IF LPAREN expr RPAREN DEFSTART
Rule 11    statement -> ELSEIF LPAREN expr RPAREN DEFSTART
Rule 12    statement -> ELSE DEFSTART
Rule 13    statement -> DVAR VAR
Rule 14    statement -> VAR EQUAL expr
Rule 15    statement -> DVAR VAR EQUAL expr
Rule 16    statement -> ARRAY VAR
Rule 17    statement -> VAR EQUAL LCB expr RCB
Rule 18    statement -> ARRAY VAR EQUAL LCB expr RCB
Rule 19    expr -> expr COMMA expr
Rule 20    statement -> PRINT LPAREN expr RPAREN
Rule 21    expr -> expr PLUS expr
Rule 22    expr -> expr MINUS expr
Rule 23    expr -> expr TIMES expr
Rule 24    expr -> expr DIVIDE expr
Rule 25    expr -> expr AND expr
Rule 26    expr -> expr OR expr
Rule 27    statement -> expr FPLUS expr
Rule 28    statement -> expr FMINUS expr
Rule 29    statement -> expr FTIMES expr
Rule 30    statement -> expr FDIVIDE expr
Rule 31    expr -> expr ISEQUAL expr
Rule 32    expr -> expr SMALLER expr
Rule 33    expr -> expr GREATER expr
Rule 34    expr -> expr NOT ISEQUAL expr
Rule 35    expr -> expr NOT SMALLER expr
Rule 36    expr -> expr NOT GREATER expr
Rule 37    expr -> NUMBER
Rule 38    expr -> DNUMBER
Rule 39    expr -> BOOLEAN
Rule 40    expr -> VAR
Rule 41    expr -> STRING
Rule 42    expr -> LPAREN expr RPAREN
Rule 43    statement -> DEFFINISH

Terminals, with rules where they appear

AND                  : 25
ARRAY                : 16 18
BOOLEAN              : 39
CALL                 : 6 7
COMMA                : 3 19
DEFFINISH            : 43
DEFSTART             : 4 5 8 9 10 11 12
DIVIDE               : 24
DNUMBER              : 38
DVAR                 : 13 15
ELSE                 : 12
ELSEIF               : 11
EQUAL                : 14 15 17 18
FALSE                : 
FDIVIDE              : 30
FMINUS               : 28
FOR                  : 9
FPLUS                : 27
FTIMES               : 29
FUNCTION             : 4 5
GREATER              : 33 36
IF                   : 10
ISEQUAL              : 31 34
KEYWORD              : 
LCB                  : 17 18
LPAREN               : 4 5 6 7 8 9 10 11 20 42
LSP                  : 
MINUS                : 22
NEWLINE              : 
NOT                  : 34 35 36
NUMBER               : 37
OR                   : 26
PLUS                 : 21
PRINT                : 20
RCB                  : 17 18
RPAREN               : 4 5 6 7 8 9 10 11 20 42
RSP                  : 
SEMICOLON            : 9 9
SMALLER              : 32 35
STRING               : 41
TIMES                : 23
TRUE                 : 
VAR                  : 4 5 6 7 13 14 15 16 17 18 40
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

expr                 : 8 9 10 11 14 15 17 18 19 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 42
statement            : 1 2 3 3 4 6 9 9
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . statement COMMA statement
    (4) statement -> . FUNCTION VAR LPAREN statement RPAREN DEFSTART
    (5) statement -> . FUNCTION VAR LPAREN RPAREN DEFSTART
    (6) statement -> . CALL VAR LPAREN statement RPAREN
    (7) statement -> . CALL VAR LPAREN RPAREN
    (8) statement -> . WHILE LPAREN expr RPAREN DEFSTART
    (9) statement -> . FOR LPAREN statement SEMICOLON expr SEMICOLON statement RPAREN DEFSTART
    (10) statement -> . IF LPAREN expr RPAREN DEFSTART
    (11) statement -> . ELSEIF LPAREN expr RPAREN DEFSTART
    (12) statement -> . ELSE DEFSTART
    (13) statement -> . DVAR VAR
    (14) statement -> . VAR EQUAL expr
    (15) statement -> . DVAR VAR EQUAL expr
    (16) statement -> . ARRAY VAR
    (17) statement -> . VAR EQUAL LCB expr RCB
    (18) statement -> . ARRAY VAR EQUAL LCB expr RCB
    (20) statement -> . PRINT LPAREN expr RPAREN
    (27) statement -> . expr FPLUS expr
    (28) statement -> . expr FMINUS expr
    (29) statement -> . expr FTIMES expr
    (30) statement -> . expr FDIVIDE expr
    (43) statement -> . DEFFINISH
    (19) expr -> . expr COMMA expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr DIVIDE expr
    (25) expr -> . expr AND expr
    (26) expr -> . expr OR expr
    (31) expr -> . expr ISEQUAL expr
    (32) expr -> . expr SMALLER expr
    (33) expr -> . expr GREATER expr
    (34) expr -> . expr NOT ISEQUAL expr
    (35) expr -> . expr NOT SMALLER expr
    (36) expr -> . expr NOT GREATER expr
    (37) expr -> . NUMBER
    (38) expr -> . DNUMBER
    (39) expr -> . BOOLEAN
    (40) expr -> . VAR
    (41) expr -> . STRING
    (42) expr -> . LPAREN expr RPAREN

    FUNCTION        shift and go to state 3
    CALL            shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 9
    IF              shift and go to state 10
    ELSEIF          shift and go to state 11
    ELSE            shift and go to state 12
    DVAR            shift and go to state 13
    VAR             shift and go to state 4
    ARRAY           shift and go to state 14
    PRINT           shift and go to state 15
    DEFFINISH       shift and go to state 16
    NUMBER          shift and go to state 17
    DNUMBER         shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    LPAREN          shift and go to state 5

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expr                           shift and go to state 8

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . statement COMMA statement
    (4) statement -> . FUNCTION VAR LPAREN statement RPAREN DEFSTART
    (5) statement -> . FUNCTION VAR LPAREN RPAREN DEFSTART
    (6) statement -> . CALL VAR LPAREN statement RPAREN
    (7) statement -> . CALL VAR LPAREN RPAREN
    (8) statement -> . WHILE LPAREN expr RPAREN DEFSTART
    (9) statement -> . FOR LPAREN statement SEMICOLON expr SEMICOLON statement RPAREN DEFSTART
    (10) statement -> . IF LPAREN expr RPAREN DEFSTART
    (11) statement -> . ELSEIF LPAREN expr RPAREN DEFSTART
    (12) statement -> . ELSE DEFSTART
    (13) statement -> . DVAR VAR
    (14) statement -> . VAR EQUAL expr
    (15) statement -> . DVAR VAR EQUAL expr
    (16) statement -> . ARRAY VAR
    (17) statement -> . VAR EQUAL LCB expr RCB
    (18) statement -> . ARRAY VAR EQUAL LCB expr RCB
    (20) statement -> . PRINT LPAREN expr RPAREN
    (27) statement -> . expr FPLUS expr
    (28) statement -> . expr FMINUS expr
    (29) statement -> . expr FTIMES expr
    (30) statement -> . expr FDIVIDE expr
    (43) statement -> . DEFFINISH
    (19) expr -> . expr COMMA expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr DIVIDE expr
    (25) expr -> . expr AND expr
    (26) expr -> . expr OR expr
    (31) expr -> . expr ISEQUAL expr
    (32) expr -> . expr SMALLER expr
    (33) expr -> . expr GREATER expr
    (34) expr -> . expr NOT ISEQUAL expr
    (35) expr -> . expr NOT SMALLER expr
    (36) expr -> . expr NOT GREATER expr
    (37) expr -> . NUMBER
    (38) expr -> . DNUMBER
    (39) expr -> . BOOLEAN
    (40) expr -> . VAR
    (41) expr -> . STRING
    (42) expr -> . LPAREN expr RPAREN

    FUNCTION        shift and go to state 3
    CALL            shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 9
    IF              shift and go to state 10
    ELSEIF          shift and go to state 11
    ELSE            shift and go to state 12
    DVAR            shift and go to state 13
    VAR             shift and go to state 4
    ARRAY           shift and go to state 14
    PRINT           shift and go to state 15
    DEFFINISH       shift and go to state 16
    NUMBER          shift and go to state 17
    DNUMBER         shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    LPAREN          shift and go to state 5

    statement                      shift and go to state 21
    expr                           shift and go to state 8

state 2

    (2) statements -> statement .
    (3) statement -> statement . COMMA statement

    FUNCTION        reduce using rule 2 (statements -> statement .)
    CALL            reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    ELSEIF          reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)
    DVAR            reduce using rule 2 (statements -> statement .)
    VAR             reduce using rule 2 (statements -> statement .)
    ARRAY           reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    DEFFINISH       reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    DNUMBER         reduce using rule 2 (statements -> statement .)
    BOOLEAN         reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    COMMA           shift and go to state 22


state 3

    (4) statement -> FUNCTION . VAR LPAREN statement RPAREN DEFSTART
    (5) statement -> FUNCTION . VAR LPAREN RPAREN DEFSTART

    VAR             shift and go to state 23


state 4

    (14) statement -> VAR . EQUAL expr
    (17) statement -> VAR . EQUAL LCB expr RCB
    (40) expr -> VAR .

    EQUAL           shift and go to state 24
    FPLUS           reduce using rule 40 (expr -> VAR .)
    FMINUS          reduce using rule 40 (expr -> VAR .)
    FTIMES          reduce using rule 40 (expr -> VAR .)
    FDIVIDE         reduce using rule 40 (expr -> VAR .)
    COMMA           reduce using rule 40 (expr -> VAR .)
    PLUS            reduce using rule 40 (expr -> VAR .)
    MINUS           reduce using rule 40 (expr -> VAR .)
    TIMES           reduce using rule 40 (expr -> VAR .)
    DIVIDE          reduce using rule 40 (expr -> VAR .)
    AND             reduce using rule 40 (expr -> VAR .)
    OR              reduce using rule 40 (expr -> VAR .)
    ISEQUAL         reduce using rule 40 (expr -> VAR .)
    SMALLER         reduce using rule 40 (expr -> VAR .)
    GREATER         reduce using rule 40 (expr -> VAR .)
    NOT             reduce using rule 40 (expr -> VAR .)


state 5

    (42) expr -> LPAREN . expr RPAREN
    (19) expr -> . expr COMMA expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr DIVIDE expr
    (25) expr -> . expr AND expr
    (26) expr -> . expr OR expr
    (31) expr -> . expr ISEQUAL expr
    (32) expr -> . expr SMALLER expr
    (33) expr -> . expr GREATER expr
    (34) expr -> . expr NOT ISEQUAL expr
    (35) expr -> . expr NOT SMALLER expr
    (36) expr -> . expr NOT GREATER expr
    (37) expr -> . NUMBER
    (38) expr -> . DNUMBER
    (39) expr -> . BOOLEAN
    (40) expr -> . VAR
    (41) expr -> . STRING
    (42) expr -> . LPAREN expr RPAREN

    NUMBER          shift and go to state 17
    DNUMBER         shift and go to state 18
    BOOLEAN         shift and go to state 19
    VAR             shift and go to state 26
    STRING          shift and go to state 20
    LPAREN          shift and go to state 5

    expr                           shift and go to state 25

state 6

    (6) statement -> CALL . VAR LPAREN statement RPAREN
    (7) statement -> CALL . VAR LPAREN RPAREN

    VAR             shift and go to state 27


state 7

    (8) statement -> WHILE . LPAREN expr RPAREN DEFSTART

    LPAREN          shift and go to state 28


state 8

    (27) statement -> expr . FPLUS expr
    (28) statement -> expr . FMINUS expr
    (29) statement -> expr . FTIMES expr
    (30) statement -> expr . FDIVIDE expr
    (19) expr -> expr . COMMA expr
    (21) expr -> expr . PLUS expr
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . TIMES expr
    (24) expr -> expr . DIVIDE expr
    (25) expr -> expr . AND expr
    (26) expr -> expr . OR expr
    (31) expr -> expr . ISEQUAL expr
    (32) expr -> expr . SMALLER expr
    (33) expr -> expr . GREATER expr
    (34) expr -> expr . NOT ISEQUAL expr
    (35) expr -> expr . NOT SMALLER expr
    (36) expr -> expr . NOT GREATER expr

    FPLUS           shift and go to state 29
    FMINUS          shift and go to state 30
    FTIMES          shift and go to state 31
    FDIVIDE         shift and go to state 32
    COMMA           shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    ISEQUAL         shift and go to state 40
    SMALLER         shift and go to state 41
    GREATER         shift and go to state 42
    NOT             shift and go to state 43


state 9

    (9) statement -> FOR . LPAREN statement SEMICOLON expr SEMICOLON statement RPAREN DEFSTART

    LPAREN          shift and go to state 44


state 10

    (10) statement -> IF . LPAREN expr RPAREN DEFSTART

    LPAREN          shift and go to state 45


state 11

    (11) statement -> ELSEIF . LPAREN expr RPAREN DEFSTART

    LPAREN          shift and go to state 46


state 12

    (12) statement -> ELSE . DEFSTART

    DEFSTART        shift and go to state 47


state 13

    (13) statement -> DVAR . VAR
    (15) statement -> DVAR . VAR EQUAL expr

    VAR             shift and go to state 48


state 14

    (16) statement -> ARRAY . VAR
    (18) statement -> ARRAY . VAR EQUAL LCB expr RCB

    VAR             shift and go to state 49


state 15

    (20) statement -> PRINT . LPAREN expr RPAREN

    LPAREN          shift and go to state 50


state 16

    (43) statement -> DEFFINISH .

    COMMA           reduce using rule 43 (statement -> DEFFINISH .)
    FUNCTION        reduce using rule 43 (statement -> DEFFINISH .)
    CALL            reduce using rule 43 (statement -> DEFFINISH .)
    WHILE           reduce using rule 43 (statement -> DEFFINISH .)
    FOR             reduce using rule 43 (statement -> DEFFINISH .)
    IF              reduce using rule 43 (statement -> DEFFINISH .)
    ELSEIF          reduce using rule 43 (statement -> DEFFINISH .)
    ELSE            reduce using rule 43 (statement -> DEFFINISH .)
    DVAR            reduce using rule 43 (statement -> DEFFINISH .)
    VAR             reduce using rule 43 (statement -> DEFFINISH .)
    ARRAY           reduce using rule 43 (statement -> DEFFINISH .)
    PRINT           reduce using rule 43 (statement -> DEFFINISH .)
    DEFFINISH       reduce using rule 43 (statement -> DEFFINISH .)
    NUMBER          reduce using rule 43 (statement -> DEFFINISH .)
    DNUMBER         reduce using rule 43 (statement -> DEFFINISH .)
    BOOLEAN         reduce using rule 43 (statement -> DEFFINISH .)
    STRING          reduce using rule 43 (statement -> DEFFINISH .)
    LPAREN          reduce using rule 43 (statement -> DEFFINISH .)
    $end            reduce using rule 43 (statement -> DEFFINISH .)
    SEMICOLON       reduce using rule 43 (statement -> DEFFINISH .)
    RPAREN          reduce using rule 43 (statement -> DEFFINISH .)


state 17

    (37) expr -> NUMBER .

    FPLUS           reduce using rule 37 (expr -> NUMBER .)
    FMINUS          reduce using rule 37 (expr -> NUMBER .)
    FTIMES          reduce using rule 37 (expr -> NUMBER .)
    FDIVIDE         reduce using rule 37 (expr -> NUMBER .)
    COMMA           reduce using rule 37 (expr -> NUMBER .)
    PLUS            reduce using rule 37 (expr -> NUMBER .)
    MINUS           reduce using rule 37 (expr -> NUMBER .)
    TIMES           reduce using rule 37 (expr -> NUMBER .)
    DIVIDE          reduce using rule 37 (expr -> NUMBER .)
    AND             reduce using rule 37 (expr -> NUMBER .)
    OR              reduce using rule 37 (expr -> NUMBER .)
    ISEQUAL         reduce using rule 37 (expr -> NUMBER .)
    SMALLER         reduce using rule 37 (expr -> NUMBER .)
    GREATER         reduce using rule 37 (expr -> NUMBER .)
    NOT             reduce using rule 37 (expr -> NUMBER .)
    RPAREN          reduce using rule 37 (expr -> NUMBER .)
    FUNCTION        reduce using rule 37 (expr -> NUMBER .)
    CALL            reduce using rule 37 (expr -> NUMBER .)
    WHILE           reduce using rule 37 (expr -> NUMBER .)
    FOR             reduce using rule 37 (expr -> NUMBER .)
    IF              reduce using rule 37 (expr -> NUMBER .)
    ELSEIF          reduce using rule 37 (expr -> NUMBER .)
    ELSE            reduce using rule 37 (expr -> NUMBER .)
    DVAR            reduce using rule 37 (expr -> NUMBER .)
    VAR             reduce using rule 37 (expr -> NUMBER .)
    ARRAY           reduce using rule 37 (expr -> NUMBER .)
    PRINT           reduce using rule 37 (expr -> NUMBER .)
    DEFFINISH       reduce using rule 37 (expr -> NUMBER .)
    NUMBER          reduce using rule 37 (expr -> NUMBER .)
    DNUMBER         reduce using rule 37 (expr -> NUMBER .)
    BOOLEAN         reduce using rule 37 (expr -> NUMBER .)
    STRING          reduce using rule 37 (expr -> NUMBER .)
    LPAREN          reduce using rule 37 (expr -> NUMBER .)
    $end            reduce using rule 37 (expr -> NUMBER .)
    SEMICOLON       reduce using rule 37 (expr -> NUMBER .)
    RCB             reduce using rule 37 (expr -> NUMBER .)


state 18

    (38) expr -> DNUMBER .

    FPLUS           reduce using rule 38 (expr -> DNUMBER .)
    FMINUS          reduce using rule 38 (expr -> DNUMBER .)
    FTIMES          reduce using rule 38 (expr -> DNUMBER .)
    FDIVIDE         reduce using rule 38 (expr -> DNUMBER .)
    COMMA           reduce using rule 38 (expr -> DNUMBER .)
    PLUS            reduce using rule 38 (expr -> DNUMBER .)
    MINUS           reduce using rule 38 (expr -> DNUMBER .)
    TIMES           reduce using rule 38 (expr -> DNUMBER .)
    DIVIDE          reduce using rule 38 (expr -> DNUMBER .)
    AND             reduce using rule 38 (expr -> DNUMBER .)
    OR              reduce using rule 38 (expr -> DNUMBER .)
    ISEQUAL         reduce using rule 38 (expr -> DNUMBER .)
    SMALLER         reduce using rule 38 (expr -> DNUMBER .)
    GREATER         reduce using rule 38 (expr -> DNUMBER .)
    NOT             reduce using rule 38 (expr -> DNUMBER .)
    RPAREN          reduce using rule 38 (expr -> DNUMBER .)
    FUNCTION        reduce using rule 38 (expr -> DNUMBER .)
    CALL            reduce using rule 38 (expr -> DNUMBER .)
    WHILE           reduce using rule 38 (expr -> DNUMBER .)
    FOR             reduce using rule 38 (expr -> DNUMBER .)
    IF              reduce using rule 38 (expr -> DNUMBER .)
    ELSEIF          reduce using rule 38 (expr -> DNUMBER .)
    ELSE            reduce using rule 38 (expr -> DNUMBER .)
    DVAR            reduce using rule 38 (expr -> DNUMBER .)
    VAR             reduce using rule 38 (expr -> DNUMBER .)
    ARRAY           reduce using rule 38 (expr -> DNUMBER .)
    PRINT           reduce using rule 38 (expr -> DNUMBER .)
    DEFFINISH       reduce using rule 38 (expr -> DNUMBER .)
    NUMBER          reduce using rule 38 (expr -> DNUMBER .)
    DNUMBER         reduce using rule 38 (expr -> DNUMBER .)
    BOOLEAN         reduce using rule 38 (expr -> DNUMBER .)
    STRING          reduce using rule 38 (expr -> DNUMBER .)
    LPAREN          reduce using rule 38 (expr -> DNUMBER .)
    $end            reduce using rule 38 (expr -> DNUMBER .)
    SEMICOLON       reduce using rule 38 (expr -> DNUMBER .)
    RCB             reduce using rule 38 (expr -> DNUMBER .)


state 19

    (39) expr -> BOOLEAN .

    FPLUS           reduce using rule 39 (expr -> BOOLEAN .)
    FMINUS          reduce using rule 39 (expr -> BOOLEAN .)
    FTIMES          reduce using rule 39 (expr -> BOOLEAN .)
    FDIVIDE         reduce using rule 39 (expr -> BOOLEAN .)
    COMMA           reduce using rule 39 (expr -> BOOLEAN .)
    PLUS            reduce using rule 39 (expr -> BOOLEAN .)
    MINUS           reduce using rule 39 (expr -> BOOLEAN .)
    TIMES           reduce using rule 39 (expr -> BOOLEAN .)
    DIVIDE          reduce using rule 39 (expr -> BOOLEAN .)
    AND             reduce using rule 39 (expr -> BOOLEAN .)
    OR              reduce using rule 39 (expr -> BOOLEAN .)
    ISEQUAL         reduce using rule 39 (expr -> BOOLEAN .)
    SMALLER         reduce using rule 39 (expr -> BOOLEAN .)
    GREATER         reduce using rule 39 (expr -> BOOLEAN .)
    NOT             reduce using rule 39 (expr -> BOOLEAN .)
    RPAREN          reduce using rule 39 (expr -> BOOLEAN .)
    FUNCTION        reduce using rule 39 (expr -> BOOLEAN .)
    CALL            reduce using rule 39 (expr -> BOOLEAN .)
    WHILE           reduce using rule 39 (expr -> BOOLEAN .)
    FOR             reduce using rule 39 (expr -> BOOLEAN .)
    IF              reduce using rule 39 (expr -> BOOLEAN .)
    ELSEIF          reduce using rule 39 (expr -> BOOLEAN .)
    ELSE            reduce using rule 39 (expr -> BOOLEAN .)
    DVAR            reduce using rule 39 (expr -> BOOLEAN .)
    VAR             reduce using rule 39 (expr -> BOOLEAN .)
    ARRAY           reduce using rule 39 (expr -> BOOLEAN .)
    PRINT           reduce using rule 39 (expr -> BOOLEAN .)
    DEFFINISH       reduce using rule 39 (expr -> BOOLEAN .)
    NUMBER          reduce using rule 39 (expr -> BOOLEAN .)
    DNUMBER         reduce using rule 39 (expr -> BOOLEAN .)
    BOOLEAN         reduce using rule 39 (expr -> BOOLEAN .)
    STRING          reduce using rule 39 (expr -> BOOLEAN .)
    LPAREN          reduce using rule 39 (expr -> BOOLEAN .)
    $end            reduce using rule 39 (expr -> BOOLEAN .)
    SEMICOLON       reduce using rule 39 (expr -> BOOLEAN .)
    RCB             reduce using rule 39 (expr -> BOOLEAN .)


state 20

    (41) expr -> STRING .

    FPLUS           reduce using rule 41 (expr -> STRING .)
    FMINUS          reduce using rule 41 (expr -> STRING .)
    FTIMES          reduce using rule 41 (expr -> STRING .)
    FDIVIDE         reduce using rule 41 (expr -> STRING .)
    COMMA           reduce using rule 41 (expr -> STRING .)
    PLUS            reduce using rule 41 (expr -> STRING .)
    MINUS           reduce using rule 41 (expr -> STRING .)
    TIMES           reduce using rule 41 (expr -> STRING .)
    DIVIDE          reduce using rule 41 (expr -> STRING .)
    AND             reduce using rule 41 (expr -> STRING .)
    OR              reduce using rule 41 (expr -> STRING .)
    ISEQUAL         reduce using rule 41 (expr -> STRING .)
    SMALLER         reduce using rule 41 (expr -> STRING .)
    GREATER         reduce using rule 41 (expr -> STRING .)
    NOT             reduce using rule 41 (expr -> STRING .)
    RPAREN          reduce using rule 41 (expr -> STRING .)
    FUNCTION        reduce using rule 41 (expr -> STRING .)
    CALL            reduce using rule 41 (expr -> STRING .)
    WHILE           reduce using rule 41 (expr -> STRING .)
    FOR             reduce using rule 41 (expr -> STRING .)
    IF              reduce using rule 41 (expr -> STRING .)
    ELSEIF          reduce using rule 41 (expr -> STRING .)
    ELSE            reduce using rule 41 (expr -> STRING .)
    DVAR            reduce using rule 41 (expr -> STRING .)
    VAR             reduce using rule 41 (expr -> STRING .)
    ARRAY           reduce using rule 41 (expr -> STRING .)
    PRINT           reduce using rule 41 (expr -> STRING .)
    DEFFINISH       reduce using rule 41 (expr -> STRING .)
    NUMBER          reduce using rule 41 (expr -> STRING .)
    DNUMBER         reduce using rule 41 (expr -> STRING .)
    BOOLEAN         reduce using rule 41 (expr -> STRING .)
    STRING          reduce using rule 41 (expr -> STRING .)
    LPAREN          reduce using rule 41 (expr -> STRING .)
    $end            reduce using rule 41 (expr -> STRING .)
    SEMICOLON       reduce using rule 41 (expr -> STRING .)
    RCB             reduce using rule 41 (expr -> STRING .)


state 21

    (1) statements -> statements statement .
    (3) statement -> statement . COMMA statement

    FUNCTION        reduce using rule 1 (statements -> statements statement .)
    CALL            reduce using rule 1 (statements -> statements statement .)
    WHILE           reduce using rule 1 (statements -> statements statement .)
    FOR             reduce using rule 1 (statements -> statements statement .)
    IF              reduce using rule 1 (statements -> statements statement .)
    ELSEIF          reduce using rule 1 (statements -> statements statement .)
    ELSE            reduce using rule 1 (statements -> statements statement .)
    DVAR            reduce using rule 1 (statements -> statements statement .)
    VAR             reduce using rule 1 (statements -> statements statement .)
    ARRAY           reduce using rule 1 (statements -> statements statement .)
    PRINT           reduce using rule 1 (statements -> statements statement .)
    DEFFINISH       reduce using rule 1 (statements -> statements statement .)
    NUMBER          reduce using rule 1 (statements -> statements statement .)
    DNUMBER         reduce using rule 1 (statements -> statements statement .)
    BOOLEAN         reduce using rule 1 (statements -> statements statement .)
    STRING          reduce using rule 1 (statements -> statements statement .)
    LPAREN          reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    COMMA           shift and go to state 22


state 22

    (3) statement -> statement COMMA . statement
    (3) statement -> . statement COMMA statement
    (4) statement -> . FUNCTION VAR LPAREN statement RPAREN DEFSTART
    (5) statement -> . FUNCTION VAR LPAREN RPAREN DEFSTART
    (6) statement -> . CALL VAR LPAREN statement RPAREN
    (7) statement -> . CALL VAR LPAREN RPAREN
    (8) statement -> . WHILE LPAREN expr RPAREN DEFSTART
    (9) statement -> . FOR LPAREN statement SEMICOLON expr SEMICOLON statement RPAREN DEFSTART
    (10) statement -> . IF LPAREN expr RPAREN DEFSTART
    (11) statement -> . ELSEIF LPAREN expr RPAREN DEFSTART
    (12) statement -> . ELSE DEFSTART
    (13) statement -> . DVAR VAR
    (14) statement -> . VAR EQUAL expr
    (15) statement -> . DVAR VAR EQUAL expr
    (16) statement -> . ARRAY VAR
    (17) statement -> . VAR EQUAL LCB expr RCB
    (18) statement -> . ARRAY VAR EQUAL LCB expr RCB
    (20) statement -> . PRINT LPAREN expr RPAREN
    (27) statement -> . expr FPLUS expr
    (28) statement -> . expr FMINUS expr
    (29) statement -> . expr FTIMES expr
    (30) statement -> . expr FDIVIDE expr
    (43) statement -> . DEFFINISH
    (19) expr -> . expr COMMA expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr DIVIDE expr
    (25) expr -> . expr AND expr
    (26) expr -> . expr OR expr
    (31) expr -> . expr ISEQUAL expr
    (32) expr -> . expr SMALLER expr
    (33) expr -> . expr GREATER expr
    (34) expr -> . expr NOT ISEQUAL expr
    (35) expr -> . expr NOT SMALLER expr
    (36) expr -> . expr NOT GREATER expr
    (37) expr -> . NUMBER
    (38) expr -> . DNUMBER
    (39) expr -> . BOOLEAN
    (40) expr -> . VAR
    (41) expr -> . STRING
    (42) expr -> . LPAREN expr RPAREN

    FUNCTION        shift and go to state 3
    CALL            shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 9
    IF              shift and go to state 10
    ELSEIF          shift and go to state 11
    ELSE            shift and go to state 12
    DVAR            shift and go to state 13
    VAR             shift and go to state 4
    ARRAY           shift and go to state 14
    PRINT           shift and go to state 15
    DEFFINISH       shift and go to state 16
    NUMBER          shift and go to state 17
    DNUMBER         shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    LPAREN          shift and go to state 5

    statement                      shift and go to state 51
    expr                           shift and go to state 8

state 23

    (4) statement -> FUNCTION VAR . LPAREN statement RPAREN DEFSTART
    (5) statement -> FUNCTION VAR . LPAREN RPAREN DEFSTART

    LPAREN          shift and go to state 52


state 24

    (14) statement -> VAR EQUAL . expr
    (17) statement -> VAR EQUAL . LCB expr RCB
    (19) expr -> . expr COMMA expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr DIVIDE expr
    (25) expr -> . expr AND expr
    (26) expr -> . expr OR expr
    (31) expr -> . expr ISEQUAL expr
    (32) expr -> . expr SMALLER expr
    (33) expr -> . expr GREATER expr
    (34) expr -> . expr NOT ISEQUAL expr
    (35) expr -> . expr NOT SMALLER expr
    (36) expr -> . expr NOT GREATER expr
    (37) expr -> . NUMBER
    (38) expr -> . DNUMBER
    (39) expr -> . BOOLEAN
    (40) expr -> . VAR
    (41) expr -> . STRING
    (42) expr -> . LPAREN expr RPAREN

    LCB             shift and go to state 54
    NUMBER          shift and go to state 17
    DNUMBER         shift and go to state 18
    BOOLEAN         shift and go to state 19
    VAR             shift and go to state 26
    STRING          shift and go to state 20
    LPAREN          shift and go to state 5

    expr                           shift and go to state 53

state 25

    (42) expr -> LPAREN expr . RPAREN
    (19) expr -> expr . COMMA expr
    (21) expr -> expr . PLUS expr
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . TIMES expr
    (24) expr -> expr . DIVIDE expr
    (25) expr -> expr . AND expr
    (26) expr -> expr . OR expr
    (31) expr -> expr . ISEQUAL expr
    (32) expr -> expr . SMALLER expr
    (33) expr -> expr . GREATER expr
    (34) expr -> expr . NOT ISEQUAL expr
    (35) expr -> expr . NOT SMALLER expr
    (36) expr -> expr . NOT GREATER expr

    RPAREN          shift and go to state 55
    COMMA           shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    ISEQUAL         shift and go to state 40
    SMALLER         shift and go to state 41
    GREATER         shift and go to state 42
